# turnkey-book

./: README.md  pyproject.toml
turnkeybook/cli/: __init__.py
turnkeybook/neuralnetworks/: request_stabilityAI.py
turnkeybook/neuralnetworks/communication/: __init__.py  chatgpt_communicator.py  communicator.py
